webui/static/stylesheets/modules.css
/* ... */
				
				/* sometimes fake columns are added to the
				 * table head, to make things line up. hide
				 * this embarressing fact as best i can */
				thead td {
					border-top: none; }

			/* for rows which have headers on the left,
			 * remove the fancy graident and bump the
			 * title against the content */
			tr.horiz-th th {
				background: #e1e1e1;
				text-align: right;
			}
		
			/* a 1px border between each line
			 * TODO: why isn't this on a <tr>? */
			td, th {
				padding: 0.5em;
				border-top: 1px solid #eee; 
			}
			
			/* for those lucky browsers which support :last-child,
			 * (which is all of them, except for IE6), space out the
			 * columns a bit more, without imposing extra markup on
			 * the template author */
			body:last-child td            { padding-right: 1.5em; }
			body:last-child td:last-child { padding-right: 0.5em; }
			
			/* TODO: docs */
			td a.unknown {
				color: #66BDDD;
				font-style: italic;
			}
			
			/* some cells have nothing important to say,
			 * (like "none" or "never"), but are required
			 * none the less. make them dull, to highlight
			 * the rows which contain real data */
			td.na {
				color: #ccc;
				font-style: italic;
			}

		
	tr.no-data { }
		
			tr.no-data td {
				text-align: center;
				background: #f8f8ff;
				padding: 2em;
				color: #aaa;
			}
			
			/* since no-data rows usually only have a single
			 * <td>, the last-child rule above breaks their
			 * huge padding. this is a hack to fix it. */
			body:last-child tr.no-data td:last-child {
				padding-right: 2em; }
			
			tr.no-data td a.add {
				display: block;
				padding-top: 0.625em;
				font-size: 80%;
			}
	
	tr.depth-1 td.indent { padding-left: 2em;  }
	tr.depth-2 td.indent { padding-left: 4em;  }
	tr.depth-3 td.indent { padding-left: 6em;  }
	tr.depth-4 td.indent { padding-left: 8em;  }
	tr.depth-5 td.indent { padding-left: 10em; }
	tr.depth-6 td.indent { padding-left: 12em; }
	tr.depth-7 td.indent { padding-left: 14em; }
	tr.depth-8 td.indent { padding-left: 16em; }
	
	tfoot {
		background: #eee url("../images/table-footer-bg.png") repeat-x 0 100%;
		font-size: 80%;
	}
		
		/* no padding in the footer cell; the links will
		 * float and pad themselves, so the clickable blocks
		 * will be bigger and easier to hit */
		tfoot td {
			padding: 0; }
		
			/* footer links are dull, because they're
			 * less important than the data. TODO: is this
			 * totally stupid? (i don't care, it's pretty) */
			tfoot a,
			tfoot span {
				display: block;
				float: right;
				padding: 0.5em;
				color: #aaa;
			}
			
				/* footer links can be broken up with spans,
				 * which look the same, except super dull */
				tfoot span {
					color: #ddd; }
				
				/* highlight hover links brighter than
				 * usual, since they're harder to spot */
				tfoot a:hover {
					background: #fff; }
		
			/* move all paginator links to the left,
			 * to separate from additional views and
			 * exporting, which lives on the right */
			tfoot .paginator,
			tfoot .paginator a,
			tfoot .paginator span {
				float: left; }
			
				tfoot .paginator a.active {
					background: #eee;
					color: #000;
				}
				
				tfoot .paginator .first,
				tfoot .paginator .prev,
				tfoot .paginator .next,
				tfoot .paginator .last {
					background-repeat: no-repeat;
					background-position: 0 50%;
					text-indent: -9999px;
					overflow: hidden;
					padding-right: 0;
					padding-left: 0;
					width: 16px;
				}
				
				/* links look something like:
				 *  <<  <  1 2 3 4  >  >> */
				tfoot .paginator .first { background-image: url("../icons/silk/resultset_first.png");    }
				tfoot .paginator .prev  { background-image: url("../icons/silk/resultset_previous.png"); }
				tfoot .paginator .next  { background-image: url("../icons/silk/resultset_next.png");     }
				tfoot .paginator .last  { background-image: url("../icons/silk/resultset_last.png");     }
				
				/* when a naviation link is disabled, shift
				 * the background image over to reveal the
				 * dull+transparent sprite to the left */
				tfoot .paginator span.na {
					background-position: -16px 50%; }




/* modules can include help text, to explain how
 * they should be used. this is usually hidden by
 * rs-module-help.js as default, but should not be
 * too verbose incase that doesn't work. */
.module div.help,
.module form.search {
	border-right: 0.5em solid #ffb;
	border-left: 0.5em solid #ffb;
	background: #ffc;
	padding: 1em;
}

	.module div.help p {
		margin: 0; }


/* modules can optionally contain a small
 * "toolbar", which hangs in the top right */
.module div.toolbar {
	position: absolute;
	top: 0;
	right: 0;
	height: 2em;
	line-height: 2em;
}

	/* toolbar links (add, see more, do
	 * other things) TODO: make pretty */
	.module div.toolbar a,
	.module div.toolbar span {
		display: block;
		float: right;
		color: #fff;
		margin-right: 0.625em;
		padding-left: 21px;
		background-repeat: no-repeat;
		background-position: 0 50%;
		font-size: 80%;
		cursor: pointer;
	}
	
		/* various common toolbar icons. should be from the
		 * famfamfam silk set, to fit in with RapidSMS */
		.module div.toolbar .add    { background-image: url("../icons/silk/add.png");       }
		.module div.toolbar .help   { background-image: url("../icons/silk/help.png");      }
		.module div.toolbar .search { background-image: url("../icons/silk/magnifier.png"); }
		
		/* these seem to be from the tango
		 * set... TODO: use silk! */
		.module div.toolbar .prev  { background-image: url("../icons/tango/go-previous.png"); }
		.module div.toolbar .next  { background-image: url("../icons/tango/go-next.png");     }
		.module div.toolbar .first { background-image: url("../icons/tango/go-first.png");    }
		.module div.toolbar .last  { background-image: url("../icons/tango/go-last.png");     }

.module form { }
/* ... */

